完善不会自动加载默认tab的问题

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -31,7 +31,7 @@
   <hr>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <ul class="nav nav-tabs" ng-init="vm.$stateParams.tab==='Local'">
+      <ul class="nav nav-tabs" ng-init="vm.$stateParams.tab='Local'">
         <li ng-class="{active:vm.$stateParams.tab==='Local'}">
           <a href="javascript:void(0)" ng-click="vm.transition('Local')"><i class="glyphicon glyphicon-list-alt"></i>Local news</a>
         </li>
