--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -10,6 +10,7 @@
         <li><a ui-sref="home" ui-sref-active="active">Home</a></li>
         <li><a ui-sref="about" ui-sref-active="active">About</a></li>
         <li><a ui-sref="contact" ui-sref-active="active">Contact</a></li>
+        <li><a ui-sref="people" ui-sref-active="active">People</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
         <li>Application was created {{ vm.relativeDate }}.</li>
