--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -5,6 +5,9 @@
   </div>
 
   <div class="jumbotron text-center">
-    <!-- <h1>'Allo, 'Allo!</h1>   -->
-	<h1>contact</h1>
+	<!-- <h1>contact</h1> -->
+	<b
+	 data-filter="true"
+	 data-pagination="true"
+	 ></b>
 </div>
