--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -11,6 +11,7 @@
         <li><a ui-sref="about" ui-sref-active="active">About</a></li>
         <li><a ui-sref="contact" ui-sref-active="active">Contact</a></li>
         <li><a ui-sref="people" ui-sref-active="active">People</a></li>
+        <li><a ui-sref="checkbox" ui-sref-active="active">Checkbox</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
         <li>Application was created {{ vm.relativeDate }}.</li>
@@ -18,39 +19,3 @@
     </div>
   </div>
 </nav>
-
-<!-- <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid"> 
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse"
-        data-target="#example-navbar-collapse">
-      <span class="sr-only">切换导航</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">菜鸟教程</a>
-  </div>
-  <div class="collapse navbar-collapse" id="example-navbar-collapse">
-    <ul class="nav navbar-nav">
-      <li><a ui-sref="home" ui-sref-active="active">Home</a></li>
-      <li><a ui-sref="about" ui-sref-active="active">About</a></li>
-      <li><a ui-sref="contact" ui-sref-active="active">Contact</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          Java <b class="caret"></b>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="#">jmeter</a></li>
-          <li><a href="#">EJB</a></li>
-          <li><a href="#">Jasper Report</a></li>
-          <li class="divider"></li>
-          <li><a href="#">分离的链接</a></li>
-          <li class="divider"></li>
-          <li><a href="#">另一个分离的链接</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-  </div>
-</nav> -->
