es6和undescore写法完成 待用es5和angular.foreach改写

--- a/src/app/components/checkbox/checkbox.html
+++ b/src/app/components/checkbox/checkbox.html
@@ -25,7 +25,7 @@
       <td colspan="2">
         <label class="checkbox-inline">
           <input type="checkbox" ng-model="$ctrl.permissions.$$check" ng-checked="!!permissions.$$check"
-                 ng-change="$ctrl.selectAllPermission()"> 全选
+                 ng-change="$ctrl.selectAllPermission(d)"> 全选
         </label>
       </td>
     </tr>
